feat: implemented states api
